--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
 </head>
 <body>
     <div class="top-menu">
+        <div class="content-menu">
+            <div class="text-menu-top">
+                <a href="/">Main Menu</a>
+            </div>
+        </div>
+        <div class="content-menu">
+            <div class="text-menu-top">
+                <a href="/">Staking</a>
+            </div>
+        </div>
+        <div class="content-menu">
+            <div class="text-menu-top">
+                <a href="/">Liquidations</a>
+            </div>
+        </div>
         <button id="enableEthereumButton">Connect Wallet</button>
+    </div>
+    <div class="list-assets">
+        <ul>
+            <div id="eth" class="asset">
+                
+            </div>
+            <div id="btc" class="asset">
+
+            </div>
+        </ul>
     </div>
     
 </body>
