--- a/index.html
+++ b/index.html
@@ -31,10 +31,20 @@
     <div class="list-assets">
         <ul>
             <div id="eth" class="asset">
-                
+                <div class="logo-asset">
+                    <img src="images\eth.svg" alt="ETH-LOGO" />
+                </div>
+                <div class="price-asset">
+
+                </div>
             </div>
             <div id="btc" class="asset">
+                <div class="logo-asset">
+                    <img src="images\btc.svg" alt="BTC-LOGO" />
+                </div>
+                <div class="price-asset">
 
+                </div>
             </div>
         </ul>
     </div>
