--- a/index.html
+++ b/index.html
@@ -30,19 +30,25 @@
     </div>
     <div class="list-assets">
         <ul>
-            <div id="eth" class="asset">
+            <div id="btcusdt" class="asset">
+                <div class="logo-asset">
+                    <img src="images\btc.svg" alt="BTC-LOGO" />
+                </div>
+                <div class="price-asset">
+
+                </div>
+                <div class="change-day">
+
+                </div>
+            </div>
+            <div id="ethusdt" class="asset">
                 <div class="logo-asset">
                     <img src="images\eth.svg" alt="ETH-LOGO" />
                 </div>
                 <div class="price-asset">
 
                 </div>
-            </div>
-            <div id="btc" class="asset">
-                <div class="logo-asset">
-                    <img src="images\btc.svg" alt="BTC-LOGO" />
-                </div>
-                <div class="price-asset">
+                <div class="change-day">
 
                 </div>
             </div>
