--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-menu">
         <div class="content-menu">
             <div class="text-menu-top">
-                <a href="/">Main Menu</a>
+                <a href="/">Markets</a>
             </div>
         </div>
         <div class="content-menu">
@@ -29,6 +29,10 @@
         <button id="enableEthereumButton">Connect Wallet</button>
     </div>
     <div class="list-assets">
+        <div class="market-text">
+            MARKETS
+        </div>
+        <hr>
         <ul>
             <div id="btcusdt" class="asset">
                 <div class="logo-asset">
@@ -40,6 +44,11 @@
                 <div class="change-day">
 
                 </div>
+                <a href="sub_htmls\trades.html" class="trade-link">
+                    <div>
+                        Trade BTC Know
+                    </div>
+                </a>
             </div>
             <div id="ethusdt" class="asset">
                 <div class="logo-asset">
@@ -51,6 +60,11 @@
                 <div class="change-day">
 
                 </div>
+                <a href="sub_htmls\trades.html" class="trade-link">
+                    <div>
+                        Trade ETH Know
+                    </div>
+                </a>
             </div>
         </ul>
     </div>
